# orchomp-deprecated

./: CMakeLists.txt  manifest.xml
data/robots/: herb2_padded_nosensors.robot.xml  pantilt.kinbody.xml
data/robots/barrett/.svn/: all-wcprops  entries
data/robots/barrett/odeWAMmodels/.svn/: all-wcprops  entries
data/robots/barrett/odeWAMmodels/WAM/.svn/: all-wcprops  entries
data/robots/barrett/odeWAMmodels/odeWAM/.svn/: all-wcprops  entries
pythonsrc/orchomp/: orchomp.py
pythonsrc/orchomp/.svn/: all-wcprops  entries
src/: kdtree.cpp  octtree.cpp  orchomp.cpp  orchomp_collision.cpp  orchomp_collision.h  orchomp_collision_pruner.h  orchomp_constraint.cpp  orchomp_constraint.h  orchomp_distancefield.cpp  orchomp_distancefield.h  orchomp_kdata.cpp  orchomp_kdata.h  orchomp_mod.cpp  orchomp_mod.h  orchomp_mod_collision.cpp  orchomp_mod_parse.cpp  orchomp_mod_utils.cpp  orchomp_observer.cpp  orchomp_observer.h  orchomp_sphere.h  orwrap.cpp  orwrap.h
src/chomp-multigrid/: .CMakeLists.txt.swn  .CMakeLists.txt.swo  .CMakeLists.txt.swp  mzsettings.cmake
src/chomp-multigrid/chomp/: .CMakeLists.txt.swn  .CMakeLists.txt.swo  .CMakeLists.txt.swp  .Chomp.cpp.swo  .Chomp.cpp.swp  .Chomp.h.swo  .Chomp.h.swp  .ChompGradient.cpp.swp  .ChompGradient.h.swp  .Constraint.cpp.swo  .Constraint.cpp.swp  .Constraint.h.swp  .Map2D.cpp.swp  .chomp_gradient.cpp.swo  .chomp_gradient.cpp.swp  .chomp_gradient.h.swp  .chomp_optimizer.cpp.swp  .chomp_optimizer.h.swp  .chomputil.cpp.swp  .chomputil.h.swo  .chomputil.h.swp  .circle_demo.cpp.swp  .map2d_demo.cpp.swp  .nlopt_test.cpp.swp  .stuff.cpp.swp  CMakeLists.txt  Chomp.cpp  Chomp.h  ChompOptimizerBase.cpp  ChompOptimizerBase.h  Constraint.cpp  Constraint.h  ConstraintFactory.cpp  HMC.cpp  chomputil.h  goal_circle_demo.cpp  old_chomp.cpp  stuff.cpp  testmatops.cpp
src/chomp-multigrid/mzcommon/: .DtGrid.h.swp  .TimeUtil.h.swp  DtGrid.h  Grid3.h
src/chomp-multigrid/nlopt/: .CMakeLists.txt.swp  .FindNLopt.cmake.swp  .nlopt_test.cpp.swp  ChompNLopt.cpp  ChompNLopt.h
src/chomp-multigrid/nlopt/pkgconfig/: nlopt.pc
src/pr-constraint/: README.md
src/pr-constraint/pr_constraint/: CMakeLists.txt  package.xml
src/pr-constraint/pr_constraint/include/pr_constraint/: holonomic-circle.h  holonomic.h
src/pr-constraint/pr_constraint/src/: holonomic-circle.cpp  holonomic.cpp
src/pr-constraint/pr_constraint_ompl/: CMakeLists.txt  package.xml
src/pr-constraint/pr_constraint_ompl/include/pr_constraint_ompl/geometric/planners/rrt/: CRRT.h  CRRTConnect.h
src/pr-constraint/pr_constraint_ompl/src/geometric/planners/rrt/: CRRT.cpp  CRRTConnect.cpp
src/pr-constraint/pr_constraint_openrave/: CMakeLists.txt  package.xml
src/pr-constraint/pr_constraint_openrave/include/pr_constraint_openrave/: robot-link.h
src/pr-constraint/pr_constraint_openrave/src/: robot-link.cpp
src/pr-constraint/pr_constraint_tests/: CMakeLists.txt  package.xml
src/pr-constraint/pr_constraint_tests/src/: test-ompl-circle.cpp  test-ompl-or-tsr.cpp
src/pr-constraint/pr_constraint_tsr/: CMakeLists.txt  package.xml
src/pr-constraint/pr_constraint_tsr/include/pr_constraint_tsr/: tsr.h
src/pr-constraint/pr_constraint_tsr/src/: tsr.cpp
src/utils/: timer.h
testpy/: test.py  test_arm.txt  test_box.txt  test_default.txt
testpy/benchmark/: benchmark.py
testpy/benchmark/data/: knownstates.data  randomarmstates_0.data  randomstates.data
