<package>
   <name>pr_constraint</name>
   <version>0.0.0</version>
   <description>
      Simple interface to holonomic/geometric constraints.
   </description>
   <maintainer email="cdellin@gmail.com">Chris Dellin</maintainer>
   <license>None</license>
   <buildtool_depend>catkin</buildtool_depend>
</package>
