<package>
   <name>pr_constraint_openrave</name>
   <version>0.0.0</version>
   <description>
      Simple interface to holonomic/geometric constraints.
   </description>
   <maintainer email="cdellin@gmail.com">Chris Dellin</maintainer>
   <license>None</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>openrave</build_depend>
   <run_depend>openrave</run_depend>
</package>
