<package>
   <name>pr_constraint_tests</name>
   <version>0.0.0</version>
   <description>
      Simple interface to holonomic/geometric constraints.
   </description>
   <maintainer email="cdellin@gmail.com">Chris Dellin</maintainer>
   <license>None</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>pr_constraint</build_depend>
   <build_depend>pr_constraint_tsr</build_depend>
   <build_depend>pr_constraint_openrave</build_depend>
   <build_depend>pr_constraint_ompl</build_depend>
   <build_depend>ompl</build_depend>
   <run_depend>pr_constraint</run_depend>
   <run_depend>pr_constraint_tsr</run_depend>
   <run_depend>pr_constraint_openrave</run_depend>
   <run_depend>pr_constraint_ompl</run_depend>
   <run_depend>ompl</run_depend>
</package>
