<package>
   <name>pr_constraint_tsr</name>
   <version>0.0.0</version>
   <description>
      Simple interface to holonomic/geometric constraints.
   </description>
   <maintainer email="cdellin@gmail.com">Chris Dellin</maintainer>
   <license>None</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>libcd</build_depend>
   <run_depend>libcd</run_depend>
</package>
